fixed when more than one piece was on a property not showing up properly

--- a/monopoly_board.css
+++ b/monopoly_board.css
@@ -124,6 +124,7 @@
   display: block;
   width: 20px;
   height: 20px;
+  float: left;
 }
 
 .purple{
